# labs-tp

./: README.md
Lab3_TP/: Abstract.h  Builder.h  CMakeLists.txt  Factory.h  Lab3_TP.cpp  Singleton.h
TBS_lab2/: Archer.h  Attacker.h  Building.h  CMakeLists.txt  Fort.h  IGameObject.h  MobileHouse.h  Moveable.h  TBS_lab2.cpp  Unit.h
TP_Lab4/: CMakeLists.txt  Iterator.h  RespChain.h  Strategy.h  TP_Lab4.cpp
TP_Lab5/: Adapter.h  Bridge.h  CMakeLists.txt  Proxy.h  TP_Lab5.cpp
TP_Lab6/: BankAccount.h  CMakeLists.txt  TP_Lab6.cpp
TP_Lab7/: main.py  products.db
